feat: use FFI call JVMTI function